feat(agenstra): native file upload api (#630)
the file upload and download api endpoints have been refactored
to use standard technology instead of json-encapsulated base64
encoded data

the previous pattern caused various problems regarding file processing
that can be eliminated by using web-standards exclusively
